another whitespace issue

--- a/frontend/language/styles.css
+++ b/frontend/language/styles.css
@@ -19,9 +19,22 @@
 /* Add background color to the introduction section */
 .introduction {
   background-color: #f5f5f4;
-  padding: 20px; /* Add some padding to separate content from the background */
+  padding: 20px;
+  
+   /* Add some padding to separate content from the background */
 }
 
+.introduction-container {
+  background-color: #f5f5f4;
+  padding: 45px;
+  
+}
+
+h2{
+  background-color: f5f5f4;
+  padding: 20px;
+  margin: 40px;
+}
 /* Add background color to the topsection section */
 .topsection {
   background-color: #f5f5f4;
@@ -136,9 +149,11 @@ button {
 
 h1 {
   font-size: 70px;
-  border: 2px solid #77dd77;
-  border-radius: 60px;
  background-color: #f5f5f4;
+ border-bottom: #77dd77;
+ padding: 30px;
+ margin-bottom: 40px;
+ margin-top: 40px;
   
  }
 
